2025-04-21T01:40:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14565515198 # 620
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-21
* notice: last 14d: unq all: 7 1699
* notice: prev accum: outdated-unq outdated-all / unq all: 2534 250315 / 2564 252086
* notice: next accum: outdated-unq outdated-all / unq all: 2536 250442 / 2566 252215
* notice: prev exec diff / last date diff / accum: unq all: +2 +129 -1 -74 / +2 +25 -0 -0 / 2 25
* notice: removed / changed dates: [2025-04-06] / [2025-04-07 2025-04-20 2025-04-21]

2025-04-20T01:41:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14554799426 # 619
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-20
* notice: last 14d: unq all: 7 1699
* notice: prev accum: outdated-unq outdated-all / unq all: 2532 250187 / 2560 251965
* notice: next accum: outdated-unq outdated-all / unq all: 2534 250315 / 2564 252086
* notice: prev exec diff / last date diff / accum: unq all: +4 +121 -1 -72 / +2 +23 -0 -0 / 2 23
* notice: removed / changed dates: [2025-04-05] / [2025-04-06 2025-04-19 2025-04-20]

2025-04-19T01:24:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14544296188 # 618
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-19
* notice: last 14d: unq all: 5 1702
* notice: prev accum: outdated-unq outdated-all / unq all: 2530 250062 / 2557 251837
* notice: next accum: outdated-unq outdated-all / unq all: 2532 250187 / 2560 251965
* notice: prev exec diff / last date diff / accum: unq all: +3 +128 -1 -76 / +2 +31 -0 -0 / 2 31
* notice: removed / changed dates: [2025-04-04] / [2025-04-05 2025-04-18 2025-04-19]

2025-04-18T01:27:03Z: