@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-04-22T01:36:58Z",
-  "count" : 124,
-  "count_minmax" : [ 25, 124 ],
-  "count_decinc" : [ -0, +124 ],
+  "count" : 29,
+  "count_minmax" : [ 29, 29 ],
+  "count_decinc" : [ -0, +29 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
