@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-04-21T01:40:55Z",
-  "count_outdated" : 250442,
-  "uniques_outdated" : 2536,
-  "count" : 252215,
-  "uniques" : 2566,
+  "timestamp" : "2025-04-22T01:36:58Z",
+  "count_outdated" : 250566,
+  "uniques_outdated" : 2538,
+  "count" : 252343,
+  "uniques" : 2568,
   "clones" : [
     {
-      "timestamp": "2025-04-07T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 124 ],
-      "count_decinc": [ 74, 124 ],
+      "timestamp": "2025-04-08T00:00:00Z",
+      "count": 48,
+      "count_minmax": [ 48, 124 ],
+      "count_decinc": [ 76, 124 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-04-08T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 124, 124 ],
-      "count_decinc": [ 0, 124 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2025-04-09T00:00:00Z",
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2025-04-21T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 25, 25 ],
-      "count_decinc": [ 0, 25 ],
+      "count": 124,
+      "count_minmax": [ 25, 124 ],
+      "count_decinc": [ 0, 124 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-04-22T00:00:00Z",
+      "count": 29,
+      "count_minmax": [ 29, 29 ],
+      "count_decinc": [ 0, 29 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
